[package]
name = "wg-port-forward"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "fbcf2689e7776a5af805c5a38feb5c8988829980", default-features = false }
clap = { version = "2.33", default-features = false, features = ["suggestions"] }
log = "0.4"
anyhow = "1"
smoltcp = { version = "0.8.0" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
dashmap = "4.0.2"

